--- a/app/src/main/res/drawable/corner_four_stroke.xml
+++ b/app/src/main/res/drawable/corner_four_stroke.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@android:color/transparent" />
-    <stroke android:width="1dp" android:color="@android:color/darker_gray" />
+    <stroke android:width="1dp" android:color="@color/lite_grey" />
     <corners android:topLeftRadius="10dp"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
