--- a/app/src/main/res/drawable/custom_track.xml
+++ b/app/src/main/res/drawable/custom_track.xml
@@ -3,14 +3,14 @@
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <corners android:radius="12dp" />
-            <solid android:color="@color/colorTrackChecked" />
+            <solid android:color="@color/image_primary_n_dark" />
             <size android:width="48dp" android:height="24dp" />
         </shape>
     </item>
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <corners android:radius="12dp" />
-            <solid android:color="@color/colorTrackUnchecked" />
+            <solid android:color="@color/black_n_white" />
             <size android:width="48dp" android:height="24dp" />
         </shape>
     </item>
