--- a/app/src/main/res/layout/fragment_customer_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_customer_bottom_sheet.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white_n_black"
         android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,6 +24,7 @@
                 android:textStyle="bold"
                 android:padding="@dimen/_10dp"
                 android:textSize="@dimen/txt_18sp"
+                android:textColor="@color/text_color_main"
                 android:text="Existing Customer" />
 
             <ImageView
@@ -44,24 +46,36 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
-            <EditText
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textStyle="bold"
-                android:padding="@dimen/_10dp"
-                android:textSize="@dimen/txt_18sp"
-                android:id="@+id/etCustomer"
-                android:drawableLeft="@android:drawable/ic_menu_search"
-                android:hint="Contact / Name"
-                />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5dp"
+                android:layout_marginStart="@dimen/_10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="@dimen/_10dp"
+                app:endIconMode="none">
+
+                <AutoCompleteTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_10dp"
+                    android:drawableStart="@drawable/search_icon"
+                    android:drawableTint="@color/text_color_main"
+                    android:textColor="@color/text_color_main"
+                    android:id="@+id/etCustomer"
+                    android:hint="Customer Name" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <ImageView
-                android:layout_width="34dp"
+                android:layout_width="40dp"
                 android:layout_weight="1"
                 android:id="@+id/addCustomer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginEnd="@dimen/_10dp"
+                android:layout_marginTop="@dimen/_5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@android:drawable/ic_input_add"
                 android:layout_height="34dp"
