--- a/app/src/main/res/layout/fragment_edit_customer.xml
+++ b/app/src/main/res/layout/fragment_edit_customer.xml
@@ -11,7 +11,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white_n_black">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
