--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="fixed"
+            android:background="@color/white_n_black"
             app:tabGravity="fill" />
 
         <androidx.viewpager2.widget.ViewPager2
