--- a/app/src/main/res/layout/fragment_pos_settings.xml
+++ b/app/src/main/res/layout/fragment_pos_settings.xml
@@ -10,13 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_margin="@dimen/_10dp"
+        android:background="@color/white_n_black"
         tools:context=".ui.settings.menuItems.taxSettings.tab.tabTaxes.TaxesFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_margin="@dimen/_10dp"
             android:gravity="center_vertical">
 
             <TextView android:fontFamily="@font/montserrat_medium"
@@ -25,7 +26,7 @@
                 android:text="@string/enable_cash_balance"
                 android:textSize="@dimen/txt_14sp"
                 android:textStyle="bold"
-                android:textColor="@color/black" />
+                android:textColor="@color/text_color_main" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchEnableCashBalance"
@@ -39,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_margin="@dimen/_10dp"
             android:gravity="center_vertical">
 
             <TextView android:fontFamily="@font/montserrat_medium"
@@ -47,7 +49,7 @@
                 android:text="@string/block_out_of_stock"
                 android:textSize="@dimen/txt_14sp"
                 android:textStyle="bold"
-                android:textColor="@color/black" />
+                android:textColor="@color/text_color_main" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchBlockOutOfStock"
