--- a/app/src/main/res/layout/fragment_tab_pdf.xml
+++ b/app/src/main/res/layout/fragment_tab_pdf.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white_n_black"
         android:id="@+id/linearLayout">
 
         <androidx.core.widget.NestedScrollView
@@ -82,7 +83,7 @@
                                         android:textSize="@dimen/txt_15sp"
                                         android:layout_marginTop="120dp"
                                         android:textStyle="bold"
-                                        android:textColor="@color/black"
+                                        android:textColor="@color/text_color_main"
                                         android:background="@{selectedColor}"
                                         android:text="Invoice"/>
 
@@ -167,7 +168,7 @@
                                         android:layout_marginTop="45dp"
                                         android:padding="@dimen/_8dp"
                                         android:layout_gravity="end"
-                                        android:textColor="@color/black"
+                                        android:textColor="@color/text_color_main"
                                         android:background="@{selectedColor}"
                                         android:text="Total : 1225.0"/>
 
@@ -493,9 +494,8 @@
                 android:layout_marginStart="@dimen/_20dp"
                 android:layout_marginEnd="@dimen/_20dp"
                 android:layout_marginBottom="@dimen/_10dp"
-                app:cardBackgroundColor="@{isUpdateEnable ? @color/colorPrimary : @color/lite_grey }"
+                app:cardBackgroundColor="@{isUpdateEnable ? @color/btn_primary_n_dark : @color/btn_light_grey }"
                 tools:cardBackgroundColor="@color/colorPrimary"
-                android:textColor="@color/text_color_heading"
                 android:gravity="center">
 
                 <TextView android:fontFamily="@font/montserrat_medium"
@@ -507,7 +507,7 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="20sp"
-                    android:textColor="@color/text_color_heading_reverse"/>
+                    android:textColor="@color/white"/>
                 <ProgressBar
                     android:id="@+id/progressBar"
                     android:layout_width="match_parent"
