--- a/app/src/main/res/layout/fragment_tab_printer.xml
+++ b/app/src/main/res/layout/fragment_tab_printer.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white_n_black"
         android:id="@+id/linearLayout">
 
         <androidx.core.widget.NestedScrollView
@@ -150,7 +151,6 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
                             android:text="MRP"
-
                             android:thumb="@drawable/custom_thumb"
                             android:track="@drawable/custom_track"/>
 
@@ -262,9 +262,8 @@
                 android:layout_marginStart="@dimen/_20dp"
                 android:layout_marginEnd="@dimen/_20dp"
                 android:layout_marginBottom="@dimen/_10dp"
-                app:cardBackgroundColor="@{isUpdateEnable ? @color/colorPrimary : @color/lite_grey }"
+                app:cardBackgroundColor="@{isUpdateEnable ? @color/btn_primary_n_dark : @color/btn_light_grey }"
                 tools:cardBackgroundColor="@color/colorPrimary"
-                android:textColor="@color/text_color_heading"
                 android:gravity="center">
 
                 <TextView android:fontFamily="@font/montserrat_medium"
@@ -276,7 +275,7 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="20sp"
-                    android:textColor="@color/text_color_heading_reverse"/>
+                    android:textColor="@color/white"/>
                 <ProgressBar
                     android:id="@+id/progressBar"
                     android:layout_width="match_parent"
