--- a/app/src/main/res/layout/fragment_tax_details_setting.xml
+++ b/app/src/main/res/layout/fragment_tax_details_setting.xml
@@ -14,6 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white_n_black"
         android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
