--- a/app/src/main/res/layout/tab_custom.xml
+++ b/app/src/main/res/layout/tab_custom.xml
@@ -11,5 +11,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
-        android:textColor="@color/black" />
+        android:textColor="@color/text_color_main" />
 </LinearLayout>
