--- a/app/src/main/res/menu/edit_product_menu.xml
+++ b/app/src/main/res/menu/edit_product_menu.xml
@@ -5,5 +5,6 @@
         android:id="@+id/action_delete"
         android:title="Delete"
         android:orderInCategory="100"
+        android:textColor="@color/red"
         app:showAsAction="never" /> <!-- This makes it part of the overflow (three dots) menu -->
 </menu>
