--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
 
     <color name="lite_grey">#D3D3D3</color>
     <color name="lite_grey_200">#F0F0F0</color>
+    <color name="grey_both_200">#F0F0F0</color>
 
 
 
